# mcp-forge

./: README.md  mcp-forge-implementation-prompt.md
mcp-forge/: API_REFERENCE.md  Cargo.toml  ONBOARDING.md  README.md
mcp-forge/src/: error.rs  main.rs
mcp-forge/src/analyzer/: mod.rs  parser.rs  patterns.rs  symbols.rs
mcp-forge/src/database/: mod.rs  queries.rs  schema.rs
mcp-forge/src/embeddings/: generator.rs  mod.rs
mcp-forge/src/incremental/: mod.rs
mcp-forge/src/knowledge/: graph.rs  mod.rs  relationships.rs
mcp-forge/src/server/: builder.rs  mod.rs
mcp-forge/templates/mcp-server/: generate_embeddings.py  requirements.txt  server.py  start.sh
mcp-forge/tests/: analyzer_tests.rs
mcp-forge/wiki/: Home.md  advanced-scenario-walkthroughs.md  advanced-scenarios.md  architecture.md  cli-commands.md  core-modules.md  database-layer.md  diagrams.md  embeddings.md  examples.md  incremental-watch.md  knowledge-graph.md  mcp-server-generation.md  pattern-detection.md  project-overview.md  symbol-extraction.md  testing.md
