[package]
name = "mcp-forge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tree-sitter = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2.3"
ignore = "0.4"
notify = "6.0"
rayon = "1.7"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
petgraph = "0.6"
env_logger = "0.10"
log = "0.4"
indicatif = "0.17"